# structops

./: Cargo.toml  README.md
examples/: sentence_alignment_soft_dtw.rs  soft_dtw_shift_scan.rs  soft_path_attention.rs  soft_path_on_graph.rs  user_journey_alignment.rs
src/: lib.rs  soft_dtw.rs  soft_shortest_path.rs
