[package]
name = "structops"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
repository = "https://github.com/arclabs561/structops"
homepage = "https://github.com/arclabs561/structops"
description = "Structured operators: differentiable DP relaxations (Soft-DTW, soft shortest path)."
readme = "README.md"
publish = true

[dependencies]
thiserror = "2.0"

[dev-dependencies]
graphops = "0.1"
ndarray = "0.16"
proptest = "1.9"

